archive/scale-catalog/incubator/peppermint/0.1.18/app-changelog.md


## [peppermint-0.1.18]peppermint-0.1.18 (2024-04-23)

### Chore



- bump charts to ensure new icons are released

- update groups html ([#21121](https://github.com/truecharts/charts/issues/21121))

- bump charts to release new docs to fix broken links

- bump everything to regenerate readme's and site index

- bump everything to release new doc pages

- update ignored updates to v20.3.11[@dae6129](https://github.com/dae6129) by renovate ([#21059](https://github.com/truecharts/charts/issues/21059))

- update ignored updates to v20.3.5[@aedd88a](https://github.com/aedd88a) by renovate ([#20536](https://github.com/truecharts/charts/issues/20536))

- update ignored updates to v20.3.8[@52f4118](https://github.com/52f4118) by renovate ([#20876](https://github.com/truecharts/charts/issues/20876))

- update ignored updates to v20.3.10[@c2f262c](https://github.com/c2f262c) by renovate ([#21034](https://github.com/truecharts/charts/issues/21034))

- update ignored updates to v20.3.7[@8cf9fc9](https://github.com/8cf9fc9) by renovate ([#20777](https://github.com/truecharts/charts/issues/20777))

- update ignored updates to v20.2.10[@6f99c97](https://github.com/6f99c97) by renovate ([#20000](https://github.com/truecharts/charts/issues/20000))

- update ignored updates to v20.3.6[@27edfed](https://github.com/27edfed) by renovate ([#20602](https://github.com/truecharts/charts/issues/20602))

- update ignored updates to v20.3.9[@370bb36](https://github.com/370bb36) by renovate ([#20917](https://github.com/truecharts/charts/issues/20917))

- update ignored updates to v20.3.4[@d7e1b23](https://github.com/d7e1b23) by renovate ([#20531](https://github.com/truecharts/charts/issues/20531))

- update ignored updates to v20.3.3[@3876ba5](https://github.com/3876ba5) by renovate ([#20488](https://github.com/truecharts/charts/issues/20488))

- lock file maintenance ignored by renovate ([#20393](https://github.com/truecharts/charts/issues/20393))

- update ignored updates to v20.2.13[@c6e8fea](https://github.com/c6e8fea) by renovate ([#20139](https://github.com/truecharts/charts/issues/20139))

- update ignored updates to v20.2.12[@944bc78](https://github.com/944bc78) by renovate ([#20094](https://github.com/truecharts/charts/issues/20094))

- fix few more ([#20721](https://github.com/truecharts/charts/issues/20721))

### Chore



- rework SCALE catagories/groups to match helm and remove deprecated charts ([#21111](https://github.com/truecharts/charts/issues/21111))

### Fix



- replace serviceexpert with externalinterfaces/networking-group in the SCALE GUI ([#21154](https://github.com/truecharts/charts/issues/21154))